--- a/ProEventos/ProEventos-Site/src/app/eventos/eventos.component.html
+++ b/ProEventos/ProEventos-Site/src/app/eventos/eventos.component.html
@@ -29,7 +29,7 @@
       <td class="text-center">
         <img *ngIf="exibirImg" src="/assets/{{evento.imagemURL}}" alt=""
           [style.width.px]="widthImg"
-          [style.margin.px]="marginImg"></td>
+          [style.margin.px]="0"></td>
       <td class="text-center">{{ evento.tema }}</td>
       <td class="text-center">{{ evento.local }}</td>
       <td class="text-center">{{ evento.dataEvento }}</td>
